objects/VisasAndPermits__c.object
<CustomObject><fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Visas and Permits</relationshipLabel>
        <relationshipName>VisasandPermits</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>IssueDate__c</fullName>
        <label>Issue Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Visas and Permits</relationshipLabel>
        <relationshipName>VisasAndPermits</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>StudentVisaDepartureFormSent__c</fullName>
        <inlineHelpText>Enter the date which the departure form was sent to "service du contrôle des habitants, case postale 5354, 1002 Lausanne"</inlineHelpText>
        <label>Student Visa Departure form Sent</label>
        <type>Date</type>
    </fields><fields>
        <fullName>VisaAppliedDate__c</fullName>
        <label>Visa Applied Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>VisaApprovedDate__c</fullName>
        <label>Visa Approved Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>VisaArrivalFormSubmitted__c</fullName>
        <inlineHelpText>Yellow Form that goes to the city of Lausanne</inlineHelpText>
        <label>Visa Arrival Form Submitted</label>
        <type>Date</type>
    </fields><fields>
        <fullName>VisaPermitType__c</fullName>
        <label>Visa/Permit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tourist (90 Days entry)</fullName>
                </value>
                <value>
                    <fullName>Tourist (applied for in home country)</fullName>
                </value>
                <value>
                    <fullName>Permit B - Student</fullName>
                </value>
                <value>
                    <fullName>Permit B - Work</fullName>
                </value>
                <value>
                    <fullName>Permit B - Spouse</fullName>
                </value>
                <value>
                    <fullName>Swiss - Work</fullName>
                </value>
                <value>
                    <fullName>Swiss</fullName>
                </value>
                <value>
                    <fullName>Permit C - Work</fullName>
                </value>
                <value>
                    <fullName>Permit C - Spouse</fullName>
                </value>
                <value>
                    <fullName>Permit L</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>VisaReceivedDate__c</fullName>
        <label>Visa Received Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>VisaStatus__c</fullName>
        <label>Visa Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applying</fullName>
                    <default>true</default>
                    <label>Not Applying</label>
                </value>
                <value>
                    <fullName>Applying</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Renew</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Visa_Number__c</fullName>
        <inlineHelpText>Please enter Visa Number</inlineHelpText>
        <label>Visa Number</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>XrefId__c</fullName>
        <externalId>true</externalId>
        <label>XrefId</label>
        <length>30</length>
        <type>Text</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Visas and Permits</label><nameField>
        <label>Visa and Permits Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Visas and Permits</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>ExpirationDate__c</columns>
        <columns>IssueDate__c</columns>
        <columns>Notes__c</columns>
        <columns>VisaPermitType__c</columns>
        <columns>Visa_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews></CustomObject>